--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@auth/unstorage-adapter": "^2.2.0",
     "@hookform/resolvers": "^3.4.2",
+    "@prisma/client": "5.15.0",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
@@ -40,6 +41,7 @@
     "eslint": "^8.57.0",
     "eslint-config-next": "14.2.3",
     "postcss": "^8.4.38",
+    "prisma": "^5.15.0",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5"
   }
