--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@vercel/kv": "^2.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
     "lucide-react": "^0.383.0",
     "moment": "^2.30.1",
     "next": "14.2.3",
