--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.51.5",
     "react-icons": "^5.2.1",
+    "react-intersection-observer": "^9.10.3",
     "react-quill": "^2.0.0",
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.3.0",
@@ -40,6 +41,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@tanstack/eslint-plugin-query": "^5.35.6",
     "@types/moment": "^2.13.0",
     "@types/node": "^20.14.1",
     "@types/react": "^18.3.3",
