--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@auth/unstorage-adapter": "^2.2.0",
-    "@hookform/resolvers": "^3.4.2",
+    "@hookform/resolvers": "^3.6.0",
     "@prisma/client": "5.15.0",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -24,8 +24,8 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "date-fns": "^3.6.0",
     "lucide-react": "^0.383.0",
-    "moment": "^2.30.1",
     "next": "14.2.3",
     "next-auth": "5.0.0-beta.19",
     "next-themes": "^0.3.0",
@@ -42,15 +42,14 @@
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^5.35.6",
-    "@types/moment": "^2.13.0",
-    "@types/node": "^20.14.1",
+    "@types/node": "^20.14.2",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.2.3",
     "postcss": "^8.4.38",
     "prisma": "^5.15.0",
-    "tailwindcss": "^3.4.3",
+    "tailwindcss": "^3.4.4",
     "typescript": "^5.4.5"
   }
 }
