--- a/package.json
+++ b/package.json
@@ -10,46 +10,61 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
-    "@auth/unstorage-adapter": "^2.2.0",
-    "@hookform/resolvers": "^3.6.0",
+    "@auth/unstorage-adapter": "^2.10.0",
+    "@hookform/resolvers": "^3.10.0",
     "@prisma/client": "5.15.0",
-    "@radix-ui/react-avatar": "^1.0.4",
-    "@radix-ui/react-dialog": "^1.0.5",
-    "@radix-ui/react-dropdown-menu": "^2.0.6",
-    "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-separator": "^1.0.3",
-    "@radix-ui/react-slot": "^1.0.2",
-    "@tanstack/react-query": "^5.40.1",
-    "@vercel/kv": "^2.0.0",
-    "class-variance-authority": "^0.7.0",
+    "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@tanstack/react-query": "^5.89.0",
+    "@vercel/kv": "2.0.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "cmdk": "^1.0.0",
+    "cmdk": "^1.1.1",
     "date-fns": "^3.6.0",
     "lucide-react": "^0.383.0",
-    "next": "14.2.3",
+    "next": "^15.5.3",
     "next-auth": "5.0.0-beta.19",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-hook-form": "^7.51.5",
-    "react-icons": "^5.2.1",
-    "react-intersection-observer": "^9.10.3",
+    "react-hook-form": "^7.62.0",
+    "react-icons": "^5.5.0",
+    "react-intersection-observer": "^9.16.0",
     "react-quill": "^2.0.0",
-    "sonner": "^1.4.41",
-    "tailwind-merge": "^2.3.0",
+    "sonner": "^1.7.4",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.23.8"
+    "zod": "^3.25.76"
   },
   "devDependencies": {
-    "@tanstack/eslint-plugin-query": "^5.35.6",
-    "@types/node": "^20.14.2",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "eslint": "^8.57.0",
+    "@tanstack/eslint-plugin-query": "^5.89.0",
+    "@types/node": "^20.19.16",
+    "@types/react": "^18.3.24",
+    "@types/react-dom": "^18.3.7",
+    "eslint": "^8.57.1",
     "eslint-config-next": "14.2.3",
-    "postcss": "^8.4.38",
-    "prisma": "^5.15.0",
-    "tailwindcss": "^3.4.4",
-    "typescript": "^5.4.5"
+    "postcss": "^8.5.6",
+    "prisma": "^5.22.0",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.9.2"
+  },
+  "pnpm": {
+    "overrides": {
+      "@vercel/kv": "2.0.0",
+      "next@>=14.0.0 <14.2.10": ">=14.2.10",
+      "next@>=10.0.0 <14.2.7": ">=14.2.7",
+      "next@>=14.0.0 <14.2.21": ">=14.2.21",
+      "cookie@<0.7.0": ">=0.7.0",
+      "next@<14.2.24": ">=14.2.24",
+      "next@>=13.0 <14.2.30": ">=14.2.30",
+      "next@>=0.9.9 <14.2.31": ">=14.2.31",
+      "next@>=14.0.0 <14.2.25": ">=14.2.25",
+      "next@>=9.5.5 <14.2.15": ">=14.2.15",
+      "next@>=0.9.9 <14.2.32": ">=14.2.32"
+    }
   }
 }
